--- a/index.html
+++ b/index.html
@@ -30,11 +30,18 @@
             height: 60vh;
             /*border: 0.5px solid #cddbdd;*/
             background-color: #bbe0fc;
+            border-radius: 5rem 5rem 0 0;
             box-shadow: 0 15px 19px 0 rgba(0,0,0,0.19), 0 15px 52px 0 rgba(0,0,0,0.15);
         }
 
         .design:hover {
             background-position: 50px;
+        }
+
+        .design {
+            background-image: url(/images/design.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
         }
 
         /* mobile settings*/
@@ -75,7 +82,7 @@
             </div>
         </a>
         <a href="#" class="card">
-            <div management>
+            <div class="management">
                 <div class="text"></div>
                 <div class="img"></div>
             </div>
