--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Services Section</title>
+    <script src="https://kit.fontawesome.com/d49c387940.js" crossorigin="anonymous"></script>
     <style>
         /*universal settings*/
         * {
@@ -16,7 +17,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: hsl(206, 91%, 51%);
+            background-color: #fa5d4c;
         }
 
         .services {
@@ -28,30 +29,57 @@
         .card {
             width: 100%;
             height: 60vh;
-            /*border: 0.5px solid #cddbdd;*/
-            background-color: #bbe0fc;
-            border-radius: 5rem 5rem 0 0;
-            box-shadow: 0 15px 19px 0 rgba(0,0,0,0.19), 0 15px 52px 0 rgba(0,0,0,0.15);
+            background-color: #fff;
+            border-radius: 5rem 5rem 1rem 1rem;
+            box-shadow: 0 20px 24px 0 rgba(0,0,0,0.1), 0 20px 57px 0 rgba(0,0,0,0.1);
         }
 
-        .design:hover {
-            background-position: 50px;
+        .card:hover {
+            position: relative;
+            bottom: 20px;
         }
+
+        .card .design {
+            width: 100%;
+            height: 100%;
+            border-radius: 5rem 5rem 0 0;
+        }
+
+        .img {
+            width: 30%;
+            height: 30%;
+        }
+        
 
         .design {
-            background-image: url(/images/design.jpg);
-            background-size: cover;
-            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
         /* mobile settings*/
+        .main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .section-heading {
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+            padding-top: 0.5rem;
+            color: #fff;
+        }
         .services {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 1rem;
-            padding: 2rem 0;
+            gap: 1.5rem;
+            padding: 1rem 0;
         }
 
         /* desktop setting */
@@ -61,32 +89,40 @@
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
-                /*gap: 1rem;*/
             }
         }
 
     </style>
 </head>
 <body>
-    <section class="services">
-        <a href="#" class="card">
-            <div class="design">
-                <div class="text"></div>
-                <div class="img"></div>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <div class="hosting">
-                <div class="text"></div>
-                <div class="img"></div>
-            </div>
-        </a>
-        <a href="#" class="card">
-            <div class="management">
-                <div class="text"></div>
-                <div class="img"></div>
-            </div>
-        </a>
+    <section class="main">
+        <div class="section-heading">
+            <h1>Our Services</h1>
+        </div>
+        <div class="services">
+            <a href="#" class="card">
+                <div class="design">
+                    <h2>Web Development</h2>
+                    <div class="img">
+                        <img src="/images/compass.svg" alt="compass">
+                        <!-- <i class="fa-solid fa-compass-drafting"></i> -->
+                    </div>
+                    <div class="text"></div>
+                </div>
+            </a>
+            <a href="#" class="card">
+                <div class="hosting">
+                    <div class="text"></div>
+                    <div class="img"></div>
+                </div>
+            </a>
+            <a href="#" class="card">
+                <div class="management">
+                    <div class="text"></div>
+                    <div class="img"></div>
+                </div>
+            </a>
+        </div>
     </section>
 </body>
 </html>
