--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
             bottom: 20px;
         }
 
-        .card .design {
-            width: 100%;
+        .card .design, .card .hosting, .card .management {
+            width: 80%;
             height: 100%;
+            margin: 0 auto;
             border-radius: 5rem 5rem 0 0;
+            text-align: center;
+        }
+
+        a {
+            text-decoration: none;
         }
 
         .img {
@@ -51,7 +57,7 @@
         }
         
 
-        .design {
+        .design, .hosting, .management {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -79,7 +85,7 @@
             align-items: center;
             justify-content: center;
             gap: 1.5rem;
-            padding: 1rem 0;
+            padding: 0 0 1rem 0;
         }
 
         /* desktop setting */
@@ -104,22 +110,39 @@
                 <div class="design">
                     <h2>Web Development</h2>
                     <div class="img">
-                        <img src="/images/compass.svg" alt="compass">
-                        <!-- <i class="fa-solid fa-compass-drafting"></i> -->
+                        <img src="/images/compass.svg" alt="web development">
                     </div>
-                    <div class="text"></div>
+                    <div class="text">
+                        <p>
+                            Whatever your development needs are, we are here to help.<br>We bring ideas to web.
+                        </p>
+                    </div>
                 </div>
             </a>
             <a href="#" class="card">
                 <div class="hosting">
-                    <div class="text"></div>
-                    <div class="img"></div>
+                    <h2>Web Hosting</h2>
+                    <div class="img">
+                        <img src="/images/cloud-solid.svg" alt="cloud hosting">
+                    </div>
+                    <div class="text">
+                        <p>
+                            We provide secure and affordable cloud hosting. Our servers have 99.9999 availability.
+                        </p>
+                    </div>
                 </div>
             </a>
             <a href="#" class="card">
                 <div class="management">
-                    <div class="text"></div>
-                    <div class="img"></div>
+                    <h2>Web Management</h2>
+                    <div class="img">
+                        <img src="/images/gears-solid.svg" alt="web management">
+                    </div>
+                    <div class="text">
+                        <p>
+                            We take the burden of managing your website so you can focus on running your business.
+                        </p>
+                    </div>
                 </div>
             </a>
         </div>
