moved styles from tag to style sheet

--- a/index.html
+++ b/index.html
@@ -5,100 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Services Section</title>
+    <link rel="stylesheet" href="./style/style.css">
     <script src="https://kit.fontawesome.com/d49c387940.js" crossorigin="anonymous"></script>
-    <style>
-        /*universal settings*/
-        * {
-            box-sizing: border-box;
-            scroll-behavior: smooth;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #fa5d4c;
-        }
-
-        .services {
-            width: 80%;
-            height: 100vh;
-            margin: 0 auto;
-        }
-
-        .card {
-            width: 100%;
-            height: 60vh;
-            background-color: #fff;
-            border-radius: 5rem 5rem 1rem 1rem;
-            box-shadow: 0 20px 24px 0 rgba(0,0,0,0.1), 0 20px 57px 0 rgba(0,0,0,0.1);
-        }
-
-        .card:hover {
-            position: relative;
-            bottom: 20px;
-        }
-
-        .card .design, .card .hosting, .card .management {
-            width: 80%;
-            height: 100%;
-            margin: 0 auto;
-            border-radius: 5rem 5rem 0 0;
-            text-align: center;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        .img {
-            width: 30%;
-            height: 30%;
-        }
-        
-
-        .design, .hosting, .management {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* mobile settings*/
-        .main {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .section-heading {
-            display: flex;
-            flex-direction: column;
-            justify-content: end;
-            padding-top: 0.5rem;
-            color: #fff;
-        }
-        .services {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
-            padding: 0 0 1rem 0;
-        }
-
-        /* desktop setting */
-        @media(min-width:900px) {
-            .services {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: center;
-            }
-        }
-
-    </style>
 </head>
 <body>
     <section class="main">
@@ -110,7 +18,7 @@
                 <div class="design">
                     <h2>Web Development</h2>
                     <div class="img">
-                        <img src="/images/compass.svg" alt="web development">
+                        <img src="./images/compass.svg" alt="web development">
                     </div>
                     <div class="text">
                         <p>
@@ -123,7 +31,7 @@
                 <div class="hosting">
                     <h2>Web Hosting</h2>
                     <div class="img">
-                        <img src="/images/cloud-solid.svg" alt="cloud hosting">
+                        <img src="./images/cloud-solid.svg" alt="cloud hosting">
                     </div>
                     <div class="text">
                         <p>
@@ -136,7 +44,7 @@
                 <div class="management">
                     <h2>Web Management</h2>
                     <div class="img">
-                        <img src="/images/gears-solid.svg" alt="web management">
+                        <img src="./images/gears-solid.svg" alt="web management">
                     </div>
                     <div class="text">
                         <p>
